--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,484 @@
 /** Colors scheme **/
+/** Typography **/
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 4rem;
+  font-weight: 900;
+}
+
+h3 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 2;
+}
+p.subline {
+  font-size: 1.3rem;
+  line-height: initial;
+}
+
+/** Basic blocks **/
+html, body, header, main, footer {
+  width: 100%;
+}
+
+html, body {
+  font-family: Raleway, sans-serif;
+  font-size: 14px;
+}
+
+img {
+  max-width: 100%;
+}
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+/** modifiers **/
+.fh {
+  height: 100vh;
+}
+
+.align-left, .vertical-align_center-left {
+  text-align: left;
+}
+
+.align-right, .vertical-align_center-right {
+  text-align: right;
+}
+
+.align-center, .vertical-align_center-center {
+  text-align: center;
+}
+
+.vertical-align_center, .vertical-align_center-center, .vertical-align_center-left, .vertical-align_center-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.vertical-align_center-right {
+  align-items: flex-end;
+}
+
+.vertical-align_center-left {
+  align-items: flex-start;
+}
+
+.vertical-align_center-center {
+  align-items: center;
+}
+
+.dark {
+  color: #fff;
+}
+
+/** miscellaneous major blocks **/
+.inner-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+ul[class^=menu_] {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+}
+ul[class^=menu_].inline {
+  flex-direction: row;
+}
+ul[class^=menu_].list {
+  flex-direction: column;
+}
+ul[class^=menu_] a {
+  color: inherit;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+[class^=offgrid_] {
+  position: absolute;
+}
+
+[class^=button_] {
+  border-radius: 40px;
+  padding: 10px 50px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  transition: background-color 0.1s ease-in-out;
+}
+[class^=button_]:hover {
+  text-decoration: none;
+}
+[class^=button_] *:first-child {
+  padding-right: 10px;
+}
+
+.button_filled.red {
+  background: red;
+  color: #fff;
+}
+.button_filled.red:hover {
+  background: #af0000;
+}
+
+.button_outlined.white {
+  background: transparent;
+  color: #fff;
+  border: 3px solid #fff;
+}
+.button_outlined.white:hover {
+  background: #fff;
+  color: #000;
+}
+
+.half-block h2, .half-block p {
+  padding-bottom: 30px;
+}
+
+/** header section **/
+header {
+  position: fixed;
+  z-index: 5555;
+}
+header .header_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
+header .header_wrapper .header_logo {
+  max-width: 30%;
+}
+header .header_wrapper .header_catchphrase {
+  max-width: 20%;
+  padding: 40px;
+}
+header .header_wrapper .header_menu {
+  flex-grow: 2;
+}
+header .header_wrapper .header_menu .menu_rounded {
+  background: red;
+  border-radius: 15px;
+}
+header .header_wrapper .header_menu .menu_rounded li {
+  color: #fff;
+  padding: 20px;
+}
+header .header_wrapper .header_menu .menu_rounded li:hover {
+  font-weight: 600;
+}
+header .offgrid_fb-shortcut {
+  top: 120px;
+  right: 50px;
+}
+
+/** welcome section **/
+.welcome {
+  background: url("../../archive/images/background-1.jpg");
+}
+.welcome .row:first-child {
+  padding-top: 200px;
+  box-sizing: border-box;
+  height: 100%;
+}
+.welcome .row:first-child .col {
+  text-align: center;
+}
+.welcome .offgrid_next-link {
+  bottom: 40px;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+.welcome [class^=layer-] {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.welcome .packshot-box {
+  position: relative;
+}
+.welcome .packshot-box .extras {
+  position: absolute;
+}
+.welcome .layer-3 {
+  width: 1400px;
+  margin: 0 auto;
+}
+.welcome .layer-3 img {
+  transform: scale(1.3);
+}
+.welcome .layer-3 .layer-2 {
+  width: 80%;
+}
+.welcome .layer-3 .layer-2 .packshot-box {
+  position: relative;
+  z-index: 2222;
+}
+.welcome .layer-3 .layer-2 .packshot-box img {
+  transform: scale(1.5);
+}
+.welcome .layer-3 .layer-2 .layer-1 {
+  max-width: 500px;
+}
+.welcome .layer-3 .layer-2 .layer-1 .packshot-box {
+  position: relative;
+  z-index: 3333;
+}
+.welcome .layer-3 .layer-2 .layer-1 .packshot-box img {
+  transform: scale(1.5);
+}
+.welcome #first-package {
+  transform: rotate(-10deg) translate(70px, 50px);
+}
+.welcome #first-package .extras {
+  top: -30px;
+  left: -70px;
+  z-index: -1;
+}
+.welcome #second-package {
+  transform: rotate(-5deg) translate(-20px, 15px);
+}
+.welcome #second-package .extras {
+  top: 10px;
+  left: -250px;
+}
+.welcome #third-package .extras {
+  top: 10px;
+  left: 20px;
+}
+.welcome #fourth-package {
+  transform: rotate(5deg) translate(20px, 10px);
+}
+.welcome #fourth-package .extras {
+  top: 10px;
+  left: 20px;
+}
+.welcome #fifth-package {
+  transform: rotate(10deg) translate(-60px, 50px);
+}
+.welcome #fifth-package .extras {
+  top: 10px;
+  left: 20px;
+  z-index: -1;
+}
+
+/** video section **/
+.video {
+  background: red;
+  color: #fff;
+}
+.video .row {
+  height: 100%;
+  text-align: center;
+}
+.video video {
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+/** about section **/
+.about img {
+  margin-top: 100px;
+}
+
+/** eye catcher section **/
+.eyecatcher {
+  background: url("../../archive/images/background-2.jpg");
+}
+.eyecatcher .half-block {
+  margin: 300px 0 70px 0;
+}
+.eyecatcher .col {
+  text-align: center;
+  padding: 70px;
+}
+
+/** products section **/
+.products {
+  background: red;
+  overflow: hidden;
+}
+.products .inner-container {
+  padding: 150px 0;
+}
+.products .packshot img {
+  height: 80%;
+}
+.products .extras {
+  position: relative;
+}
+.products .extras img {
+  position: absolute;
+}
+.products .extras .first {
+  top: -120px;
+  left: 10%;
+}
+.products .extras .second {
+  top: -40px;
+  right: 15%;
+  z-index: 6666;
+}
+.products .extras .third {
+  bottom: -120px;
+  right: 20%;
+  z-index: 6666;
+}
+
+ul.nutrients-tags {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+ul.nutrients-tags li {
+  display: inline-block;
+  border: 3px solid #fff;
+  border-radius: 50px;
+  overflow: hidden;
+  margin-right: 10px;
+  height: 100px;
+}
+ul.nutrients-tags li p {
+  padding: 15px 10px;
+  margin: 0;
+  text-align: center;
+  font-weight: 700;
+  font-size: 0.8rem;
+  line-height: 1;
+  height: 50%;
+}
+ul.nutrients-tags li p:last-child {
+  color: red;
+  background: #fff;
+  font-weight: 900;
+  font-size: 1rem;
+}
+ul.nutrients-tags li small {
+  font-weight: 700;
+}
+
+/** benefits section **/
+.benefits {
+  background: url("../../archive/images/background-3.jpg");
+}
+.benefits .inner-container {
+  padding: 100px 0;
+}
+.benefits .inner-container .section-title {
+  margin-bottom: 70px;
+}
+.benefits .inner-container .vertical-align_center-right,
+.benefits .inner-container .vertical-align_center-left {
+  justify-content: space-around;
+  height: 600px;
+}
+.benefits .inner-container .vertical-align_center-center {
+  justify-content: space-between;
+  height: 700px;
+}
+.benefits .icon-box {
+  position: relative;
+}
+.benefits .icon-box p {
+  margin-top: 15px;
+  line-height: 1;
+  font-size: 1.2rem;
+}
+.benefits .icon-box p strong {
+  font-size: 1.2em;
+}
+.benefits .icon-box::after {
+  content: url("../../archive/images/arrow.png");
+  position: absolute;
+}
+.benefits #quality::after {
+  top: -70px;
+  right: -70px;
+  transform: rotate(65deg);
+}
+.benefits #extra-dry::after {
+  right: -100px;
+  top: 5px;
+  transform: rotate(120deg);
+}
+.benefits #slices::after {
+  transform: rotate(180deg);
+  left: 60px;
+  top: 130px;
+}
+.benefits #crunchy {
+  transform: translate(35px);
+}
+.benefits #crunchy::after {
+  transform: rotate(240deg);
+  left: -90px;
+  top: 120px;
+}
+.benefits #dye-free::after {
+  transform: rotate(310deg);
+  top: -50px;
+  left: -130px;
+}
+.benefits #natural {
+  transform: translate(35px);
+}
+.benefits #natural::after {
+  top: -140px;
+  transform: translate(-15px);
+}
+.benefits .extras {
+  position: relative;
+}
+.benefits .extras img {
+  position: absolute;
+}
+.benefits .extras .first {
+  top: -180px;
+  left: 40%;
+}
+
+/** fast contact **/
+.fast-contact {
+  background: red;
+}
+.fast-contact .inner-container {
+  padding: 100px 0;
+}
+
+/** footer **/
+footer {
+  background: #000;
+}
+footer .col {
+  padding: 30px 0;
+}
+footer .shrink-col {
+  padding: 0 15%;
+}
+footer .menu_social {
+  padding: 100px 0;
+}
+footer .menu_social .title {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+footer .menu_social a:hover {
+  text-decoration: underline;
+}
 
 /*# sourceMappingURL=style.css.map */
