--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,4 +4,529 @@ $basic-red: red;
 $basic-black: #000;
 $basic-white: #fff;
 
+$accent-red: #af0000;
 
+
+
+/** Typography **/
+
+h1 { font-size: 5rem; }
+h2 { 
+	font-size: 4rem;
+	font-weight: 900; 
+}
+h3 {
+	font-size: 2.5rem;
+	font-weight: 400; 
+}
+
+p { 
+	font-size: 1rem;
+	line-height: 2;
+	&.subline {
+		font-size: 1.3rem;
+		line-height: initial;
+	}
+}
+
+/** Basic blocks **/
+
+html, body, header, main, footer {
+	width: 100%;
+}
+
+html, body {
+	font-family: Raleway, sans-serif;
+	font-size: 14px;	
+}
+
+img {
+	max-width: 100%;
+}
+
+a, a:hover { 
+	color: inherit;
+	text-decoration: none;
+}
+
+
+/** modifiers **/
+.fh {
+	height: 100vh;
+}
+
+.align-left {
+	text-align: left;
+}
+
+.align-right {
+	text-align: right;
+}
+
+.align-center {
+	text-align: center;
+}
+
+.vertical-align_center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.vertical-align_center-right {
+	@extend .vertical-align_center;
+	@extend .align-right;
+    align-items: flex-end;
+}
+
+.vertical-align_center-left {
+	@extend .vertical-align_center;
+	@extend .align-left;
+    align-items: flex-start;
+}
+
+.vertical-align_center-center {
+    @extend .vertical-align_center;
+	@extend .align-center;
+	 align-items: center;
+}
+
+.dark {
+	color: $basic-white;
+}
+
+
+
+/** miscellaneous major blocks **/
+
+.inner-container {
+	width: 1200px;
+	margin: 0 auto;
+}
+
+
+ul[class^='menu_'] {
+	list-style: none;
+	display: flex;
+	justify-content: space-around;
+	padding: 0;
+	&.inline {
+		flex-direction: row;
+	}
+	&.list {
+		flex-direction: column;
+	}
+	a {
+		color: inherit;
+		text-decoration: none;
+		font-size: 1.2rem;
+	}
+}
+
+
+[class^='offgrid_'] {
+	position: absolute;
+}
+
+[class^='button_'] {
+	border-radius: 40px;
+	padding: 10px 50px;
+	font-size: 1.2rem;
+	font-weight: 600;
+	text-align: center;
+	transition: background-color .1s ease-in-out;
+	&:hover {
+		text-decoration: none;
+	}
+	*:first-child {
+		padding-right: 10px;
+	}
+}
+
+.button_filled {
+	&.red {
+		background: $basic-red;
+		color: $basic-white;
+		&:hover {
+			background: $accent-red;
+		}
+	}
+}
+
+.button_outlined {
+	&.white {
+		background: transparent;
+		color: $basic-white;
+		border: 3px solid $basic-white;
+		&:hover {
+			background: $basic-white;
+			color: $basic-black;
+		}
+	}
+}
+
+.half-block {
+	h2, p { padding-bottom: 30px;}
+}
+
+
+/** header section **/
+header {
+	position: fixed;
+	z-index: 5555;
+	.header_wrapper {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		padding: 40px 0;
+		.header_logo {
+			max-width: 30%;
+		}
+		.header_catchphrase {
+			max-width: 20%;
+			padding: 40px;
+		}
+		.header_menu {
+			flex-grow: 2;
+			.menu_rounded {
+				background: $basic-red;
+				border-radius: 15px;
+				li {
+					color: $basic-white;
+					padding: 20px;
+					&:hover {
+						font-weight: 600;
+					}
+				}
+			}
+
+		}
+	}
+	.offgrid_fb-shortcut {
+		top: 120px;
+		right: 50px;
+
+	}	
+}
+
+/** welcome section **/
+
+.welcome {
+	background: url('../../archive/images/background-1.jpg');
+	.row:first-child {
+		padding-top:200px;
+		box-sizing: border-box;
+		height: 100%;
+		.col {
+			text-align: center;
+		}
+	}
+	.offgrid_next-link {
+		bottom: 40px;
+		left: 0;
+		right: 0;
+		text-align: center;
+	}
+	[class^='layer-'] {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.packshot-box {
+		position: relative;
+		.extras {
+			position: absolute;
+		}
+	}
+
+	.layer-3 {
+		width: 1400px;
+		margin: 0 auto;
+		img {transform: scale(1.3);}
+		.layer-2 {
+			width: 80%;
+			.packshot-box {
+				position: relative;
+				z-index: 2222;
+				img {transform: scale(1.5);}
+			}
+			.layer-1 {
+				max-width: 500px;
+				.packshot-box {
+					position: relative;
+					z-index: 3333;
+					img {
+						transform: scale(1.5);
+					}
+				}
+				
+			}
+		}
+	}
+	#first-package {
+		transform: rotate(-10deg) translate(70px, 50px);
+		.extras {
+			top: -30px;
+			left: -70px;
+			z-index: -1;
+		}
+	}
+	#second-package {
+		transform: rotate(-5deg) translate(-20px, 15px);
+		.extras {
+			top: 10px;
+			left: -250px;
+		}
+	}
+	#third-package {
+		.extras {
+			top: 10px;
+			left: 20px;
+		}
+	}
+	#fourth-package {
+		transform: rotate(5deg) translate(20px, 10px);
+		.extras {
+			top: 10px;
+			left: 20px;
+		}
+	}
+	#fifth-package {
+		transform: rotate(10deg) translate(-60px, 50px);
+		.extras {
+			top: 10px;
+			left: 20px;
+			z-index: -1;
+		}
+	}
+}
+
+/** video section **/
+
+.video {
+	background: $basic-red;
+	color: $basic-white;
+	.row {
+		height: 100%;
+		text-align: center;
+	}
+	video {
+		height: 100%;
+		width: 100%;
+		display:block;
+	}
+}
+
+
+/** about section **/
+
+.about {
+	img {
+		margin-top: 100px;
+	}
+}
+
+
+/** eye catcher section **/
+
+.eyecatcher {
+	background: url('../../archive/images/background-2.jpg');
+	.half-block {
+		margin: 300px 0 70px 0;
+	}
+	.col {
+		text-align: center;
+		padding: 70px;
+	}
+}
+
+
+/** products section **/
+
+.products {
+	background: $basic-red;
+	overflow: hidden;
+	.inner-container {
+		padding: 150px 0;
+	}
+	.packshot img {
+		height: 80%;
+	}
+	.extras {
+		position: relative;
+		img {
+			position:absolute;
+		}
+		.first {
+			top: -120px;
+			left: 10%;
+		}
+		.second {
+			top: -40px;
+			right: 15%;
+			z-index: 6666;
+		}
+		.third {
+			bottom: -120px;
+			right: 20%;
+			z-index: 6666;
+		}
+	}
+}
+
+
+ul.nutrients-tags {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	li {
+		display: inline-block;
+		border: 3px solid #fff;
+		border-radius: 50px;
+		overflow: hidden;
+		margin-right: 10px;
+		height: 100px;
+		p {
+			padding: 15px 10px;
+			margin: 0;
+			text-align: center;
+			font-weight: 700;
+			font-size: 0.8rem;
+			line-height: 1;
+			height: 50%;
+		}
+		p:last-child {
+			color: $basic-red;
+			background: $basic-white;
+			font-weight: 900;
+			font-size: 1rem;
+		}
+		small {
+			font-weight: 700;	
+		}
+	}
+}
+
+
+/** benefits section **/
+
+.benefits {
+	background: url('../../archive/images/background-3.jpg');
+	.inner-container {
+		padding: 100px 0;
+		.section-title {
+			margin-bottom: 70px;
+		}
+		.vertical-align_center-right,
+		.vertical-align_center-left {
+			justify-content: space-around;
+			height: 600px;
+		}
+		.vertical-align_center-center {
+			justify-content: space-between;
+			height: 700px;
+		}
+		
+	}
+	.icon-box {
+		position: relative;
+		p {	
+			margin-top: 15px;
+			line-height: 1;
+			font-size: 1.2rem;
+			strong {
+				font-size: 1.2em;
+			}
+		}
+		&::after {
+			content: url('../../archive/images/arrow.png');
+			position:absolute;
+		}
+	}
+
+	#quality::after {
+		top: -70px;
+		right: -70px;
+		transform: rotate(65deg);
+	}
+
+	#extra-dry::after {
+		right: -100px;
+		top: 5px;
+		transform: rotate(120deg);
+	}
+	#slices::after {
+		transform: rotate(180deg);
+		left: 60px;
+		top: 130px;
+	}
+
+	#crunchy {
+		transform: translate(35px);
+		&::after {
+			transform: rotate(240deg);
+			left: -90px;
+			top: 120px;
+		}
+	}
+
+	#dye-free::after {
+		transform: rotate(310deg);
+		top: -50px;
+		left: -130px;
+	}
+
+	#natural {
+		transform: translate(35px);
+		&::after {
+			top: -140px;
+			transform: translate(-15px);
+		}
+	}
+
+	.extras {
+		position: relative;
+		img {
+			position:absolute;
+		}
+		.first {
+			top: -180px;
+			left: 40%;
+		}
+	}
+
+}
+
+/** fast contact **/
+
+.fast-contact {
+	background: $basic-red;
+	.inner-container {
+		padding: 100px 0;
+	}
+}
+
+
+/** footer **/
+
+footer {
+	background: $basic-black;
+	.col {
+		padding: 30px 0;
+	}
+	.shrink-col {
+		padding: 0 15%;
+	}
+	.menu_social {
+		padding: 100px 0;
+		.title {
+			font-weight: 700;
+			font-size: 1.2rem;
+		}
+		a:hover {
+			text-decoration: underline;;
+		}
+	}
+}
