--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -255,7 +255,7 @@ header {
 				border-radius: 15px;
 				overflow: hidden;
 				@media (max-width: $breakpoint3) { & { justify-content: space-between;} }
-				
+				@media (max-width: $breakpoint5) { & { justify-content: center;} }
 				li {
 					color: $basic-white;
 					padding: 20px;
@@ -265,6 +265,7 @@ header {
 					&.inline-logo {
 						width: 100px;
 						background: $basic-black;
+						@media (max-width: $breakpoint3) { & { border-radius: 10px;} }			    
 					}
 				}
 			}
@@ -395,7 +396,7 @@ header {
 			top: -30px;
 			left: -70px;
 			z-index: -1;
-			animation-name: example;
+			animation-name: animation1;
   			animation-duration: 10s;
   			animation-iteration-count: infinite;
 		}
@@ -405,7 +406,7 @@ header {
 		.extras {
 			top: 10px;
 			left: -250px;
-			animation-name: example;
+			animation-name: animation2;
   			animation-duration: 10s;
   			animation-iteration-count: infinite;
 		}
@@ -414,7 +415,7 @@ header {
 		.extras {
 			top: 10px;
 			left: 20px;
-			animation-name: example;
+			animation-name: animation3;
   			animation-duration: 10s;
   			animation-iteration-count: infinite;
 		}
@@ -424,7 +425,7 @@ header {
 		.extras {
 			top: 10px;
 			left: 20px;
-			animation-name: example;
+			animation-name: animation4;
   			animation-duration: 10s;
   			animation-iteration-count: infinite;
 		}
@@ -435,14 +436,32 @@ header {
 			top: 10px;
 			left: 20px;
 			z-index: -1;
-			animation-name: example;
+			animation-name: animation5;
   			animation-duration: 10s;
   			animation-iteration-count: infinite;
 		}
 	}
 }
 
-@keyframes example {
+@keyframes animation1 {
+	0% { transform: translate(20px, 10px) scale(1.5); }
+	50% { transform: translate(40px, 1px) scale(1.5); }
+	100% { transform: translate(20px, 10px) scale(1.5); }
+}
+
+@keyframes animation2 {
+	0% { transform: translate(-20px, 20px) scale(1.5) rotate(-10deg); }
+	50% { transform: translate(10px, 1px) scale(1.5) rotate(-5deg); }
+	100% { transform: translate(-20px, 20px) scale(1.5) rotate(-10deg); }
+}
+
+@keyframes animation3 {
+	0% { transform: translate(20px, 10px) scale(1.5) rotate(5deg); }
+	50% { transform: translate(20px, 1px) scale(1.5) rotate(15deg); }
+	100% { transform: translate(20px, 10px) scale(1.5) rotate(5deg); }
+}
+
+@keyframes animation4 {
 	0% { transform: translate(20px, 10px) scale(1.5); }
 	50% { transform: translate(40px, 1px) scale(1.5); }
 	100% { transform: translate(20px, 10px) scale(1.5); }
@@ -601,6 +620,7 @@ ul.nutrients-tags {
 	bottom: initial;
 	left: initial;
 	list-style: none;
+	margin: 0;
 	li {
 		display: inline-block;
 		cursor: pointer;
@@ -703,6 +723,7 @@ ul.nutrients-tags {
 
 	#crunchy {
 		transform: translate(35px);
+		@media (max-width: $breakpoint3) { & { transform: translate(0px); } }
 		&::after {
 			transform: rotate(240deg);
 			left: -90px;
@@ -718,6 +739,7 @@ ul.nutrients-tags {
 
 	#natural {
 		transform: translate(35px);
+		@media (max-width: $breakpoint3) { & { transform: translate(0px); } }
 		&::after {
 			top: -140px;
 			transform: translate(-15px);
@@ -733,8 +755,9 @@ ul.nutrients-tags {
 			top: -180px;
 			left: 40%;
 		}
+		@media (max-width: $breakpoint3) { & { display: none; } }
 	}
-	@media (max-width: $breakpoint3) { & { display: none; } }
+	
 }
 
 /** fast contact **/
