--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -326,12 +326,13 @@ header {
 
 .welcome {
 	background: url('../../archive/images/background-1.jpg');
-	background-size: cover;
+	background-color: #383838;
 	position: relative;
+	background-size: cover;
 	@media (min-aspect-ratio: 21/10) { 
 		& {
 			height: 120vh;
-		} 
+		}
 	}
 	.row:first-child {
 		padding-top:200px;
